testsuite/tests/rename/should_fail/T15611b.script
:l T15611b
T15611b.foo
